[fix] I have footer on mobile on admin \o/

--- a/saya_theme/static/css/sticky-footer.css
+++ b/saya_theme/static/css/sticky-footer.css
@@ -47,9 +47,9 @@ footer .container {
     }
 }
 
-@media (max-width: 760px) {
-    footer {
-        display: none;
+@media (max-width: 768px) {
+    #page-content-wrapper {
+        position: relative;
     }
 }
 
